--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.81.5",
     "@tanstack/react-virtual": "^3.13.10",
     "@types/jsonwebtoken": "^9.0.10",
+    "botid": "^1.5.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
