--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-radio-group": "^1.2.4",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-toast": "^1.2.13",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.81.5",
@@ -35,6 +36,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-fade": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "googleapis": "^164.1.0",
     "isomorphic-dompurify": "^2.29.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.522.0",
@@ -50,6 +52,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-player": "^2.16.0",
+    "screenfull": "^6.0.2",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
